tests_bucklescript/__snapshots__/Error_Legacy_missingField_re.4badeca6.0.snapshot
Error Legacy › missingField2.re › output
File \"tests_bucklescript/operations/errors/missingField2.re\", line 13, characters 8-28:
13 |     l1: thisTypeDoesNotExist {
             ^^^^^^^^^^^^^^^^^^^^
Error: Unknown field 'thisTypeDoesNotExist' on type Query

  We've found a bug for you!
  missingField2.re
  
  Error while running external preprocessor
